Fixed better UI in tree (now css controls if state info should be visible). Also some text changes and foremost an improved sort-algorithm on localized trees.

--- a/src/webapp/css/menu.css
+++ b/src/webapp/css/menu.css
@@ -15,6 +15,13 @@
 	font-style: none;
 }
 
+.webfx-tree-item a span.stateText {
+	display:none;
+}
+.webfx-tree-item a span.translationInfo {
+	display:none;
+}
+
 /* GENERAL TREE PROPERTIES */
 .webfx-tree-item {
 	height: 20px;
